# dswm

./: #asdf.lisp#  #index.html#  .#asdf.lisp  .#index.html  .gitignore  .gitmodules  .travis.yml  :  AUTHORS  CNAME  Gemfile  HACKING  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  NEWS_dev  NEWS_trunk  README  README.md  TODO  TODO_build  _config.yml  aclocal.m4  asdf.lisp  bindings.lisp  bootstrap  build.jab  color.lisp  color_trunk.lisp  command.lisp  command_new.lisp  config.status  config_example.lisp  configure  configure.ac  core.lisp  decorations.lisp  defaults.lisp  (+65 more)
_includes/: footer.html  header.html
_pages/: index.md  qwe.md  zzz.md
_posts/: 2015-09-30-welcome-to-jekyll.markdown
_sass/: #_layout.scss#
_site/: CNAME  index.html  zzz.html
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
config/: dswm.desktop.in.orig  dswm.lisp  stumpwm.desktop  unity.man
contrib/: asdf-ecl.lisp  quicklisp.lisp
copyright/: AUTHORS
data/: Makefile.am  Makefile.in
data/applications/: dswm.desktop  dswm.desktop.in
data/cinnamon-session/: dswm-gnome-fallback.session
data/gnome-session/: dswm-gnome.session
data/gnome-wm-properties/: openbox.desktop
data/openbox-examples/gnome/: gnome-dswm.session
data/openbox-examples/openbox-example/: openbox-gnome-session
data/openbox-examples/openbox-example/share/applications/: openbox.desktop
data/openbox-examples/openbox-example/share/doc-base/: openbox
data/openbox-examples/openbox-example/share/doc/openbox/: AUTHORS  COMPLIANCE  README  build.html  config.html  copyright  details.html  toc.html
data/openbox-examples/openbox-example/share/gnome/wm-properties/: openbox.desktop
data/openbox-examples/openbox-example/share/locale/ar/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/bn_IN/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/ca/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/cs/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/da/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/de/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/en@boldquot/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/en@quot/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/es/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/et/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/eu/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/fi/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/fr/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/hr/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/hu/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/it/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/ja/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/lt/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/lv/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/nl/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/no/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/pl/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/pt/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/pt_BR/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/ru/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/sk/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/sr/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/sr@latin/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/sv/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/tr/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/uk/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/vi/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/zh_CN/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/locale/zh_TW/LC_MESSAGES/: openbox.mo
data/openbox-examples/openbox-example/share/menu/: openbox
data/openbox-examples/openbox-example/share/pixmaps/: openbox.xpm
data/openbox-examples/openbox-example/share/themes/Clearlooks-3.4/openbox-3/: themerc
data/openbox-examples/openbox-example/share/themes/Clearlooks-Olive/openbox-3/: themerc
data/openbox-examples/openbox-example/share/xsessions/: openbox-gnome.desktop  openbox-kde.desktop
data/xsessions/: dswm-gnome.desktop.in  dswm-lxde.desktop.in  dswm-mate.desktop.in  dswm-xfce.desktop.in  dswm.desktop.in
debian/: .gitignore  NEWS  README.Debian  TODO  changelog  control  copyright  deepshell.1  dswm.1  dswm.desktop  dswm.doc-base  dswm.menu  install  load.lisp  rules  watch  wm
doc/: INSTALL  Makefile  Makefile.am  Makefile.in  TODO  TODO_build  TODO_install  commands.muse  defines.muse  dswm-types.muse  dswm.info  dswm.texi  (+3 more)
etc/: Makefile.am  Makefile.am~  Makefile.in  Makefile~
etc/mate/usr/share/mate-session/sessions/: mate-stumpwm.session
src/: #events.lisp#  Makefile  Makefile.am  Makefile.in  Makefile.in.orig  Makefile~  bindings.lisp  changes.org  color.lisp  command.lisp  configure.ac  deepshell  definitions.lisp  dswm.asd  dswm.asd.in  dswm.desktop  dswm.lisp  events.lisp  fdump.lisp  floating-group.lisp  floating-window.lisp  font-rendering.lisp  group.lisp  head.lisp  help.lisp  help.lisp.in  helper.lisp  input.lisp  install.sh  iresize.lisp  keysyms.lisp  keytrans.lisp  kmap.lisp  library.lisp  loader.header  loader.lisp  loader.lisp.in  loader.sh.in  make-image.lisp  manual.lisp  (+19 more)
src/experimental/: dbus-import.lisp  dbus.lisp  xkeyboard.lisp
(+136 files in other folders)
