desktopdir = $(datadir)/applications
desktop_DATA = applications/dswm.desktop

icondir = $(datadir)/icons
icon_DATA = img/dswm.svg

pixmapdir = $(icondir)
pixmap_DATA=img/dswm.png

xsessionsdir = $(datadir)/xsessions

xsessions_DATA = @XSESSION_DATA@
# \
#         xsessions/dswm.desktop \
# 	xsessions/dswm-gnome.desktop \
#         xsessions/dswm-mate.desktop \
#         xsessions/dswm-xfce.desktop \
#         xsessions/dswm-cinnamon.desktop \
#         xsessions/dswm-kde.desktop
