## config directory
sysconfdir=${etcdir}
sysconf_DATA = dswm.lisp

# install-data-local:
#	test -d "$(datarootdir)/dswm/modules" || mkdir -p "$(DESTDIR)$(datarootdir)/dswm/modules"
#	test -z "$(bindir)" || mkdir -p "$(DESTDIR)$(bindir)"
#	test -d "$(DESTDIR)$(etcdir)" || mkdir -p "$(DESTDIR)$(etcdir)"
#	test -f "$(DESTDIR)$(etcdir)/dswm.lisp" || install -m 644 dswm.lisp "$(DESTDIR)$(etcdir)/dswm.lisp"
#	install -d -m 755 modules "$(DESTDIR)$(datarootdir)/dswm/modules"
#	find modules -type f -exec install -D {} -m 644 $(data_dir)/dswm/{} \; || true
#	install -m 644 ../copyright/COPYING "$(data_dir)/dswm/"
#	install -m 644 ../copyright/AUTHORS "$(data_dir)/dswm/"
##################################################################################
# 	test -d "$(DESTDIR)$(etcdir)/dswm/" || mkdir -p "$(DESTDIR)$(etcdir)/dswm"
# 	test -f "$(DESTDIR)$(etcdir)/dswm/dswm.lisp" || install -m 644 ../config/dswm.lisp "$(DESTDIR)$(etcdir)/dswm/dswm.lisp"
